--- a/Index.html
+++ b/Index.html
@@ -122,7 +122,7 @@ by Warren Machanik of Quaffee and expertly blended by his master roaster<br> Mzu
 <p><h4>GROUP 3</h4></p>
 ZAMIKHAYA<img src="image13.JPEG" alt="ZAMIKHAYA" class="avatar">
 MBASOXOLO<img src="image14.JPEG" alt="MBASOXOLO" class="avatar">
-SIPHOLO<img src="image16.JPEG" alt="SIPHELO" class="avatar">
+SIPHELO<img src="image16.JPEG" alt="SIPHELO" class="avatar">
 
 WENDY<img src="image12.JPEG" alt="WENDY" class="avatar">
 IKGOMOTSENG<img src="image15.JPEG" alt="IKGOMOTSENG" class="avatar">
