--- a/about us.html
+++ b/about us.html
@@ -149,7 +149,7 @@ community  issues and has stayed that
 <p><h4>GROUP 3</h4></p>
 ZAMIKHAYA<img src="image13.JPEG" alt="ZAMIKHAYA" class="avatar">
 MBASOXOLO<img src="image14.JPEG" alt="MBASOXOLO" class="avatar">
-SIPHOLO<img src="image16.JPEG" alt="SIPHELO" class="avatar">
+SIPHELO<img src="image16.JPEG" alt="SIPHELO" class="avatar">
 WENDY<img src="image12.JPEG" alt="WENDY" class="avatar">
 IKGOMOTSENG<img src="image15.JPEG" alt="IKGOMOTSENG" class="avatar">
 </footer>
